0.1-alpha3/_sources/gene/AGAP007105.rst.txt
:orphan:



AGAP007105
==========

Location: **2L:42,795,728-42,798,687**





External links:
`VectorBase <https://www.vectorbase.org/Anopheles_gambiae/Gene/Summary?g=AGAP007105>`_ |
`Ag1000G genome browser <https://www.malariagen.net/apps/ag1000g/phase1-AR3/index.html?genome_region=2L:42795728-42798687#genomebrowser>`_





Overlapping selection signals
-----------------------------

The following signals have a focus which overlaps this gene.

.. cssclass:: table-hover
.. list-table::
    :widths: auto
    :header-rows: 1

    * - Signal
      - Statistic
      - Population
      - Focus
      - Peak model :math:`\Delta_{i}`
      - Max. percentile
      - Known locus
    * - :doc:`../signal/IHS/UGS/2/4/index`
      - IHS
      - Uganda *An. gambiae*
      - 2L:42,794,895-42,834,895
      - 155
      - 97.5%
      - nan
    * - :doc:`../signal/H12/UGS/2/5/index`
      - H12
      - Uganda *An. gambiae*
      - 2L:42,774,895-42,814,895
      - 98
      - 94.4%
      - nan
    






Comments
--------


.. raw:: html

    <div id="disqus_thread"></div>
    <script>
    
    var disqus_config = function () {
        this.page.identifier = '/gene/AGAP007105';
    };
    
    (function() { // DON'T EDIT BELOW THIS LINE
    var d = document, s = d.createElement('script');
    s.src = 'https://agam-selection-atlas.disqus.com/embed.js';
    s.setAttribute('data-timestamp', +new Date());
    (d.head || d.body).appendChild(s);
    })();
    </script>
    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments.</a></noscript>


